Añadí carpeta assets y archivos multimedia

--- a/index.html
+++ b/index.html
@@ -144,8 +144,8 @@
                 <div class="recurso-card">
                     <h3>🎥 Video propio</h3>
                     <p>
-                        Graba un video explicando uno de los ejemplos (por ejemplo, el de Medicina o Economía)
-                        y súbelo a YouTube. Luego reemplaza el ID del video en el iframe.
+                        Grabamos un video explicando uno de los ejemplos 
+                        y lo subimos a YouTube. 
                     </p>
                     <div class="video-frame">
                         <!-- Reemplaza VIDEO_ID_PROPIO por tu ID de YouTube -->
@@ -161,15 +161,15 @@
                 <!-- VIDEOS EXTERNOS -->
                 <div class="recurso-card">
                     <h3>🔗 Videos externos recomendados</h3>
-                    <p>Ejemplos de videos que puedes citar (actualiza los enlaces si eliges otros):</p>
+                    <p>Ejemplos de videos que puedes visitar:</p>
                     <ul class="video-links">
                         <li>
-                            <a href="https://www.youtube.com/watch?v=yr2b8mlT3NM" target="_blank">
-                                Introducción a las derivadas – Khan Academy en Español
+                            <a href="https://youtu.be/izGTzSy5X10?si=sL0ClB54A-lJzncv" target="_blank">
+                                Introducción a las derivadas – Profe Alex
                             </a>
                         </li>
                         <li>
-                            <a href="https://www.youtube.com/watch?v=85h9q4Ck1p0" target="_blank">
+                            <a href="https://youtu.be/KYvTWs54EgE?si=sYrQOuMEkLBGnEsb" target="_blank">
                                 Aplicaciones de la derivada en la vida real
                             </a>
                         </li>
@@ -180,7 +180,7 @@
                 <div class="recurso-card">
                     <h3>🖼 Infografía original</h3>
                     <p>
-                        Crea tu infografía en Canva o Genially, descárgala como imagen y sustitúyela aquí.
+                        Infografia creada para graficar las aplicaciones de la derivada en diferentes áreas.
                     </p>
                     <div class="infografia-frame">
                         <img src="assets/infografia-derivadas.png" alt="Infografía sobre aplicaciones de la derivada">
