Arreglando el titulo

--- a/index.html
+++ b/index.html
@@ -202,8 +202,8 @@
                 <div class="recurso-card">
                     <h3>🎧 Podcast</h3>
                     <p>
-                        Graba un breve podcast (puede ser con tu voz explicando un ejemplo o reflexionando
-                        sobre la importancia de las derivadas) y guárdalo como <code>podcast-derivadas.mp3</code>.
+                        Encontramos un podcast interesante sobre derivadas que puedes escuchar aquí.
+                                  
                     </p>
                     <audio controls>
                         <source src="assets/podcast-derivadas.mp3" type="audio/mpeg">
