--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                     <div class="video-frame">
                         <!-- Reemplaza VIDEO_ID_PROPIO por tu ID de YouTube -->
                         <iframe 
-                            src="https://www.youtube.com/embed/VIDEO_ID_PROPIO" 
+                            src="https://youtu.be/ehVDOt_HhMQ" 
                             title="Video propio sobre derivadas"
                             frameborder="0"
                             allowfullscreen>
